/*
 * $Id: ChangeLog,v 1.2575 2004/03/15 22:37:42 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-03-16 07:35 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/transfrm.c
    ! re-introduce hacks to handle conversion of string/numbers to numeric
      format eg. transform( "1234567890", "@9"), transform( 1234567890, "@9")
      where the length of format is less than that of the passed value.

2004-03-15 14:42 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/dbfcdx/dbfcdx1.c
    * Missing type casts.

2004-03-15 22:40 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/tbrowse.prg
    * More optimizations, formatting and few bug fixes.
      TBrowse is now much faster than Clipper's, tested with BCC, GTWVT on P-IV 2.66 processor.

  * xharbour/source/rtl/gtwvt/gtwvt.c
    * Replaced GetDC( hWnd )/ReleaseDC( hDC ) with _s.hdc where applicable, has decresed the
      screen refresh time with some percent.

2004-03-15 13:30 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbfntx/dbfntx1.c
    ! some small synchronizations with Harbour and fixed some bugs:
      tag name just after "index on ...", setting BOF()/EOF() flags
      in SKIP(), SKIP() when BOF() is set, etc. Still SEEK doesn't
      respect filters()

  * xharbour/source/rdd/workarea.c
    * some small optimizations in dbeval()

  * xharbour/include/hbapi.h
    * optimized version of HB_IS_COMPLEX() - now disabled

  * xharbour/include/hbrddcdx.h
    + force flushing index on commit()

  * xharbour/include/dbinfo.ch
    + new DBORDERINFO() params: DBOI_SKIPEVAL, DBOI_SKIPEVALBACK,
      DBOI_SKIPREGEX, DBOI_SKIPREGEXBACK for poor index skipping
      until evaluated code block or regular expression doesn't
      return TRUE. Code block receive two parameters index key